--- a/client/src/components/button/button.scss
+++ b/client/src/components/button/button.scss
@@ -29,6 +29,17 @@
     background-color: rgb(162, 204, 255);
   }
 
+  &__secondary {
+    border: 1px solid #000000;
+    background-color: #fff;
+    color: #000000;
+
+    &:disabled {
+      color: #555;
+      border-color: #555;
+    }
+  }
+
   &__ghost {
     background-color: rgb(244, 249, 254);
     border: 1px solid #EAECEE;
